--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2014,6 +2014,40 @@ textarea {
   }
 }
 
+.small-screen-append__navbar-main .small-screen-append__navbar-main {
+  display: flex;
+}
+
+.navbar__main {
+  display: flex;
+  gap: 1rem;
+}
+.navbar__main .navbar__main--search,
+.navbar__main .navbar__main--create {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+  width: 100px;
+}
+.navbar__main .navbar__main--search__links-container,
+.navbar__main .navbar__main--create__links-container {
+  display: flex;
+  align-items: center;
+}
+.navbar__main .navbar__main--menu .field-container .input-container {
+  background-color: var(--color-blue);
+}
+.navbar__main .navbar__main--menu .field-container .input-container .skyz-name {
+  padding-left: 1.5rem;
+  color: var(--color-primary);
+  font-weight: 700;
+  font-size: 14px;
+}
+.navbar__main .navbar__main--media-small {
+  display: none;
+}
+
 .dropdown {
   position: relative;
   z-index: 20;
