--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -1,12 +1,13 @@
 /* Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap');
 
 :root {
   font-size: 62.5%;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Noto Sans Hebrew", sans-serif;
   line-height: 1.9;
   scroll-behavior: smooth;
   overflow-x: hidden;
