--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -69,7 +69,7 @@
     .navbar__personal {
       display: flex;
       align-items: center;
-      gap: $gap-big;
+      gap: $gap-medium;
     }
   }
   .navbar-bottom {
