--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -766,132 +766,9 @@ hr {
   background-color: var(--color-blue-hover);
 }
 
-.group {
-  gap: 0.5rem;
-}
-.group .group-name {
-  font-size: 1.25rem;
-  margin-right: 0.5rem;
-  color: gray;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.group .dynamic-btns-group {
-  opacity: 0;
-}
-.group .dynamic-btns-group span {
-  font-size: 22px;
-}
-.group .group-name:hover .dynamic-btns-group {
-  opacity: 1;
-}
-.group .group-topics {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 1.25rem;
-}
-.group .group-topics .topic {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  padding: 0 0.5rem;
-  border-radius: 6px 6px 0 0;
-  margin-bottom: 0.6rem;
-  border: 1px solid var(--color-bg-dark);
-}
-.group .group-topics .topic span {
-  font-size: 16px;
-}
-.group .group-topics .topic.green-clicked {
-  background-color: var(--color-green-kanban);
-}
-.group .group-topics .topic.green-clicked span {
-  color: var(--color-green);
-}
-.group .group-topics .topic.blue-clicked {
-  background-color: var(--color-blue);
-}
-.group .group-topics .topic.blue-clicked span {
-  color: var(--color-primary);
-}
-.group .group-fields {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  flex-wrap: wrap;
-}
-.group .group-fields .edit-content {
-  cursor: pointer;
-  max-width: 100px;
-}
-.group .group-fields .edit-content .edit-field:hover {
-  background-color: var(--color-permanent-bg);
-}
-.group .group-fields .edit-content:hover {
-  background-color: transparent;
-}
-.group .group-fields .value-text {
-  color: var(--color-on-primary-light);
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.group .group-fields.green .edit-field:hover {
-  background-color: var(--color-green);
-}
-.group .group-fields.green .edit-field:hover .value-text {
-  color: var(--color-on-primary);
-}
-.group .group-fields.blue .edit-field:hover {
-  background-color: var(--color-primary);
-}
-.group .group-fields.blue .edit-field:hover .value-text {
-  color: var(--color-on-primary);
-}
-
-.group.green .group-name {
-  color: #36562c;
-}
-.group.green .group-fields .edit-content .edit-field {
-  border: 1px solid #d5f3dc;
-}
-.group.green .group-fields .edit-content .edit-field:hover {
-  background-color: #d5f3dc;
-}
-
-.group.blue .group-name {
-  color: var(--color-primary);
-}
-.group.blue .group-fields .edit-content .edit-field {
-  border: 1px solid var(--color-blue);
-}
-.group.blue .group-fields .edit-content .edit-field:hover {
-  background-color: var(--color-blue);
-}
-
-.group.purple .group-name {
-  color: #3b4aa1;
-}
-.group.purple .group-fields .edit-content .edit-field {
-  border: 1px solid #e1d6fe;
-}
-.group.purple .group-fields .edit-content .edit-field:hover {
-  background-color: #e1d6fe;
-}
-
 .expand-more {
   align-self: flex-end;
   font-size: 1.25rem;
-}
-
-.group-container-create {
-  margin-bottom: 1rem;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 0.5rem 1.5rem;
 }
 
 .navbar {
@@ -940,7 +817,7 @@ hr {
   align-items: center;
   gap: 1rem;
   position: relative;
-  width: 100px;
+  width: 120px;
 }
 .navbar .navbar-top .navbar__main .navbar__main--search__links-container,
 .navbar .navbar-top .navbar__main .navbar__main--create__links-container {
@@ -967,8 +844,130 @@ hr {
 .navbar .navbar-bottom {
   display: flex;
   flex-direction: column;
-  margin-top: 1rem;
+  align-items: center;
+  margin-top: 1.5rem;
+  gap: 0.5rem;
+}
+.navbar .navbar-bottom .create-container .group-container-create {
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5rem 1.5rem;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-name {
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+  color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .dynamic-btns-group {
+  opacity: 0;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .dynamic-btns-group span {
+  font-size: 22px;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-name:hover .dynamic-btns-group {
+  opacity: 1;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics {
+  display: flex;
+  align-items: center;
   gap: 1rem;
+  font-size: 1.25rem;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0 0.5rem;
+  border-radius: 6px 6px 0 0;
+  margin-bottom: 0.6rem;
+  border: 1px solid var(--color-bg-dark);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic span {
+  font-size: 16px;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic.green-clicked {
+  background-color: var(--color-green-kanban);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic.green-clicked span {
+  color: var(--color-green);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic.blue-clicked {
+  background-color: var(--color-blue);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-topics .topic.blue-clicked span {
+  color: var(--color-primary);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields .edit-content {
+  cursor: pointer;
+  max-width: 100px;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields .edit-content .edit-field:hover {
+  background-color: var(--color-permanent-bg);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields .edit-content:hover {
+  background-color: transparent;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields .value-text {
+  color: var(--color-on-primary-light);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields.green .edit-field:hover {
+  background-color: var(--color-green);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields.green .edit-field:hover .value-text {
+  color: var(--color-on-primary);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields.blue .edit-field:hover {
+  background-color: var(--color-primary);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group .group-fields.blue .edit-field:hover .value-text {
+  color: var(--color-on-primary);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.green .group-name {
+  color: #36562c;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.green .group-fields .edit-content .edit-field {
+  border: 1px solid #d5f3dc;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.green .group-fields .edit-content .edit-field:hover {
+  background-color: #d5f3dc;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.blue .group-name {
+  color: var(--color-primary);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.blue .group-fields .edit-content .edit-field {
+  border: 1px solid var(--color-blue);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.blue .group-fields .edit-content .edit-field:hover {
+  background-color: var(--color-blue);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.purple .group-name {
+  color: #3b4aa1;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.purple .group-fields .edit-content .edit-field {
+  border: 1px solid #e1d6fe;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group.purple .group-fields .edit-content .edit-field:hover {
+  background-color: #e1d6fe;
 }
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
@@ -985,17 +984,7 @@ hr {
     gap: 1rem;
     align-items: center;
   }
-  .navbar .navbar-top .navbar__create {
-    display: none;
-  }
   .navbar .navbar-top .navbar__menu {
-    display: none;
-  }
-  .navbar .navbar-top .navbar__main .navbar__main--search,
-  .navbar .navbar-top .navbar__main .navbar__main--create {
-    width: min-content;
-  }
-  .navbar .navbar-input {
     display: none;
   }
 }
@@ -1094,49 +1083,13 @@ hr {
   align-items: center;
 }
 
-.group-fields {
-  padding: 0 1rem;
-  font-size: 14px;
-}
-
 .focus-category {
   background-color: var(--color-blue);
 }
 
-.full-menu {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  justify-items: center;
-  padding: 1rem;
-  border-top: 1px solid var(--color-light-gray);
-}
-.full-menu__box {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-}
-.full-menu__box--title {
-  font-size: 1.4rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  color: var(--color-primary);
-  font-weight: 500;
-}
-.full-menu__box--title .material-symbols-outlined {
-  font-size: 1.9rem;
-}
-.full-menu__box--list {
-  font-size: 1.2rem;
-}
-.full-menu__box--list li {
-  cursor: pointer;
-  font-weight: 300;
-}
-.full-menu__box--list li:hover,
-.full-menu__box--list li:active {
-  font-weight: 400;
+.search-width {
+  width: fit-content;
+  background-color: red;
 }
 
 .home {
