--- a/sass/_btns.scss
+++ b/sass/_btns.scss
@@ -55,19 +55,19 @@
 }
 .round-btn-primary.green {
   color: var(--color-on-primary);
-  background-color: var(--color-green);
+  background-color: #3A700B;
 }
 .round-btn-primary.purple {
   color: var(--color-on-primary);
-  background-color: #6d35bb;
+  background-color: #6F45A1;;
 }
 .round-btn-primary.yellow {
   color: var(--color-on-primary);
-  background-color: #ba9e09;
+  background-color: #DFAC4A;
 }
-.round-btn-primary.white {
+.round-btn-primary.blue {
   color: var(--color-primary);
-  background-color: var(--color-on-primary);
+  background-color: var(--color-primary);
 }
 // .round-btn-primary:hover,
 // .round-btn-primary:active {
