--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -52,7 +52,6 @@
       .navbar__main--menu {
         .field-container {
           .input-container {
-            background-color: var(--color-blue);
             .skyz-name {
               padding-left: 1.5rem;
               color: var(--color-primary);
@@ -78,6 +77,7 @@
     align-items: center;
     margin-top: 1.5rem;
     gap: .5rem;
+    box-shadow: 0px 15px 10px -15px #afafaf;  
     .create-container {
      .group-container-create {
      margin-bottom: 1rem;
@@ -233,6 +233,19 @@
       }
     }
        }
+    }
+  }
+
+  .navbar-bottom.menu {
+    .menu {
+      display: flex;
+      flex-direction: column;
+      font-size: 14px;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .material-symbols-outlined {
+      color: var(--color-primary);
     }
   }
 
@@ -419,4 +432,22 @@
 .search-width {
   width: fit-content;
   background-color: red;
+}
+
+.field-container {
+  .input-container {
+    background-color: var(--color-on-primary);
+  }
+  .input-container.yellow {
+    border: 1px solid #DFAC4A;
+  }
+  .input-container.purple {
+    border: 1px solid #6F45A1;
+  }
+  .input-container.green {
+    border: 1px solid #3A700B;
+  }
+  .input-container.blue {
+    border: 1px solid var(--color-primary);
+  }
 }
