--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -824,9 +824,6 @@ hr {
   display: flex;
   align-items: center;
 }
-.navbar .navbar-top .navbar__main .navbar__main--menu .field-container .input-container {
-  background-color: var(--color-blue);
-}
 .navbar .navbar-top .navbar__main .navbar__main--menu .field-container .input-container .skyz-name {
   padding-left: 1.5rem;
   color: var(--color-primary);
@@ -847,6 +844,7 @@ hr {
   align-items: center;
   margin-top: 1.5rem;
   gap: 0.5rem;
+  box-shadow: 0px 15px 10px -15px #afafaf;
 }
 .navbar .navbar-bottom .create-container .group-container-create {
   margin-bottom: 1rem;
@@ -969,6 +967,16 @@ hr {
 .navbar .navbar-bottom .create-container .group-container-create .group.purple .group-fields .edit-content .edit-field:hover {
   background-color: #e1d6fe;
 }
+.navbar .navbar-bottom.menu .menu {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+}
+.navbar .navbar-bottom.menu .material-symbols-outlined {
+  color: var(--color-primary);
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1090,6 +1098,22 @@ hr {
 .search-width {
   width: fit-content;
   background-color: red;
+}
+
+.field-container .input-container {
+  background-color: var(--color-on-primary);
+}
+.field-container .input-container.yellow {
+  border: 1px solid #DFAC4A;
+}
+.field-container .input-container.purple {
+  border: 1px solid #6F45A1;
+}
+.field-container .input-container.green {
+  border: 1px solid #3A700B;
+}
+.field-container .input-container.blue {
+  border: 1px solid var(--color-primary);
 }
 
 .home {
@@ -2398,22 +2422,22 @@ textarea {
 
 .round-btn-primary.green {
   color: var(--color-on-primary);
-  background-color: var(--color-green);
+  background-color: #3A700B;
 }
 
 .round-btn-primary.purple {
   color: var(--color-on-primary);
-  background-color: #6d35bb;
+  background-color: #6F45A1;
 }
 
 .round-btn-primary.yellow {
   color: var(--color-on-primary);
-  background-color: #ba9e09;
+  background-color: #DFAC4A;
 }
 
-.round-btn-primary.white {
+.round-btn-primary.blue {
   color: var(--color-primary);
-  background-color: var(--color-on-primary);
+  background-color: var(--color-primary);
 }
 
 .round-btn-secondary {
