--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -53,7 +53,6 @@
         display: flex;
         align-items: center;
         gap: 7px;
-        // flex-wrap: wrap;
       }
     }
     .right {
@@ -61,20 +60,21 @@
       align-items: center;
       gap: 1.5rem;
       font-size: font-size(font-size-regular);
-      flex-wrap: wrap;
       margin-bottom: 1rem;
+      // overflow-x: scroll;
+
 
       .header-fields {
         display: flex;
         gap: $gap-small;
-        flex-wrap: wrap;
         align-items: center;
+
         .add-circle {
           opacity: 0;
         }
 
         .edit-content {
-          width: fit-content;
+          width: max-content;
           height: 35px;
         }
         .edit-content.green {
@@ -204,6 +204,7 @@
       .right {
         margin: 1rem 0 1.5rem 0;
         align-self: flex-start;
+
       }
     }
   }
