--- a/sass/_inputs.scss
+++ b/sass/_inputs.scss
@@ -6,10 +6,15 @@ input[type="number"] {
   padding: 0 $padding-small;
   color: var(--color-on-primary-light);
   background-color: transparent;
-  width: 100%;
   font-size: font-size(font-size-regular);
+  width: 80px;
   font-family: "Open Sans", sans-serif;
 }
+
+.search-input-clicked {
+  width: 120px !important;
+}
+
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="number"]:focus,
@@ -17,7 +22,6 @@ textarea {
   outline: none !important;
 }
 input[type="number"] {
-  -moz-appearance: textfield;
   max-width: 120px;
 }
 input::-webkit-outer-spin-button,
